test/libsolidity/syntaxTests/parsing/enum_declaration_identifier_expected.sol
contract c {
	enum foo { WARNING, 1, }
}
// ----
// ParserError 1612: (34-35): Expected identifier after ','